// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProtectedRoute snapshots matches snapshot when authenticated 1`] = `
<div>
  <div>
    Protected Content
  </div>
</div>
`;

exports[`ProtectedRoute snapshots matches snapshot when loading 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center"
  >
    <div
      aria-label="Loading"
      class="animate-spin rounded-full h-12 w-12 border-t-2 border-b-2 border-indigo-500"
      data-testid="loading-spinner"
      role="status"
    >
      <span
        class="sr-only"
      >
        Loading...
      </span>
    </div>
  </div>
</div>
`;

exports[`ProtectedRoute snapshots matches snapshot when not authenticated 1`] = `
<div>
  <div
    data-testid="location-state"
  >
    {"from":{"pathname":"/protected","search":"","hash":"","state":null,"key":"default"}}
  </div>
</div>
`;
